--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,34 +1,44 @@
-<body class="d-flex flex-column h-100">
-    <div class="container">
-        <h1> Créez votre événement </h1>        
+<div class="col-md-6 order-md-1">
+    <h1>Créer un événement</h1>
+</div>
+
+<div class="col-md-6 order-md-1">
+
+    <%=form_for @event do |form|%>
+
+    <div class="field">
+        <%= form.label :title %>
+        <%= form.text_field :title, class:"form-control" %>
+    </div>
+    
+    <div class="field">
+        <%= form.label :start_date %>
+        <%= form.datetime_select :start_date, class:"form-control" %>
     </div>
 
-    <div class="container">
-        <form>
-        <div class="form-group row">
-            <div class="form-row">
-                <div class="col">
-                    <input type="text" class="form-control" placeholder="Titre de l'événement">
-                </div>
-
-                <div class="col">
-                        <input type="datetime-local" class="form-control" id="meeting-time"
-                        name="meeting-time" value="<%= Date.today%>">
-                </div>               
-            </div>
-        </div>    
-
-        <div class="form-group row">
-            <div class="form-row">
-                <div class="col-7">
-                    <input type="text" class="form-control" placeholder="Lieu de l'événement">
-                </div>
-            <div class="col-5">
-                <input type="text" class="form-control" placeholder="Durée de l'événement">        
-            </div>
-        </div>    
-
-
-        </form>
+    <div class="field">
+        <%= form.label :duration %>
+        <%= form.number_field :duration, in: 0..10080, step: 5, class:"form-control" %>
     </div>
-</body>
+
+    <div class="field">
+        <%= form.label :description %>
+        <%= form.text_area :description, class:"form-control" %>
+    </div>
+
+    <div class="field">
+        <%= form.label :location %>
+        <%= form.text_field :location, class:"form-control" %>
+    </div>
+
+    <div class="field">
+        <%= form.label :price %>
+        <%= form.number_field :price, in: 1..1000, class:"form-control"%>
+    </div>
+
+    <div class="actions">
+        <%= form.submit class:"btn btn-primary btn-lg btn-block"%>
+    </div>
+    <% end %>
+</div>
+
